@@ -26,12 +26,11 @@ namespace DAnCE
     {
     public:
       virtual ~CompletionHandler () {}
-      
+
       virtual void handle_completion (PROCESSOR *processor) = 0;
       virtual void handle_exception (CORBA::Exception* local_ex) = 0;
     };
-
-  }; /* DAnCE */
+  } /* DAnCE */
 
 #include /**/ "ace/post.h"
 
